[package]
name = "quake3-huffman"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "decode"
harness = false

[dependencies]
bitvec = "1.0.1"
bytes = "1.6.0"
thiserror = "1.0.60"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = ["cargo_bench_support", "rayon"] }
hex-literal = "0.4.1"

[badges]
maintenance = { status = "experimental" }
