[package]
name = "quake3-huffman"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "decode"
harness = false

[features]
default = [
    "std",
]
alloc = [
    "bitvec/alloc",
]
std = [
    "alloc",
    "dep:thiserror",
]

[dependencies]
bitvec = { version = "1.0.1", default-features = false }
# technically bytes is no_std but it requires atomics, so doesn't compile on e.g. thumbv6m-none-eabi
bytes = { version = "1.6.0", default-features = false }
thiserror = { version = "1.0.60", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = ["cargo_bench_support", "rayon"] }
hex-literal = "0.4.1"

[badges]
maintenance = { status = "experimental" }

[package.metadata.docs.rs]
targets = []
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
