[package]
name = "quake3-protocol"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bytes = "1.6.0"
quake3 = { path = "../quake3" }
thiserror = "1.0.59"
winnow = "0.6.9"

[badges]
maintenance = { status = "experimental" }

[dev-dependencies]
hex-literal = "0.4.1"
